--- a/style.css
+++ b/style.css
@@ -1124,6 +1124,19 @@ p {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 }
 
+.margin-top {
+  margin-top: -44px;
+}
+
+.jobs {
+  text-align: center;
+  font-size: 26px;
+}
+
+button {
+  cursor: pointer;
+}
+
 .team-social-icon {
   position: absolute;
   z-index: 5;
